<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
                android:background="@drawable/mainbackground"

                android:gravity="center"
    android:ignoreGravity="@string/_true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tictac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="TIC TAC TOE"
        android:textSize="30sp"
        android:textStyle="bold"
        android:shadowColor="#000000"

        android:shadowRadius="2"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />



    <Button
        android:id="@+id/normalMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:background="@drawable/redgradient"
        android:onClick="@string/normal"
        android:text="@string/normalText"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/UltimateMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/normalMode"
        android:layout_below="@+id/normalMode"
        android:layout_marginTop="41dp"
        android:background="@drawable/redgradient"
        android:onClick="@string/ultimate"
        android:textColor="#ffffff"
        android:text="@string/ultimateText" />

    <Button
        android:id="@+id/AboutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/UltimateMode"
        android:layout_below="@+id/UltimateMode"
        android:layout_marginTop="42dp"
        android:textColor="#ffffff"
        android:background="@drawable/redgradient"
        android:onClick="@string/about"
        android:text="@string/aboutText" />

    <Button
        android:id="@+id/Exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AboutBtn"
        android:layout_below="@+id/AboutBtn"
        android:textColor="#ffffff"
        android:layout_marginTop="41dp"
        android:background="@drawable/redgradient"
        android:onClick="@string/exit"
        android:text="@string/exitText" />

</RelativeLayout>
