<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mainbackground"
    tools:context="com.experiments.tictactoe.activities.EnterGameActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtCreatingUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_8"
            android:imeOptions="actionDone"
            android:gravity="center_vertical"
            android:hint="@string/user_name" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCreateRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/redgradient"
        android:padding="@dimen/padding_8"
        android:text="@string/create_new_room" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:padding="@dimen/padding_8"
        android:text="@string/or"
        android:textSize="@dimen/font_20" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtRoomId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_8"
            android:imeOptions="actionDone"
            android:gravity="center_vertical"
            android:hint="@string/room_id" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtJoiningUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_8"
            android:imeOptions="actionDone"
            android:gravity="center_vertical"
            android:hint="@string/user_name" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnJoinRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="@dimen/padding_8"
        android:background="@drawable/redgradient"
        android:text="@string/join_room" />

</LinearLayout>
