<?xml version="1.0" encoding="utf-8"?>
<!-- Demonstrates using a relative layout to create a form -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"

                android:gravity="center"
                android:label="@string/normal_activity_label"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:animateLayoutChanges="true">




    <TextView
        android:id="@+id/moveTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"


        android:gravity="center"
        android:text="@string/x_move"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="100dp"
                android:onClick="@string/makeMove"
                android:background="@drawable/square"
                android:width="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text=" "
                android:textSize="70sp" />

        <Button android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:onClick="@string/makeMove"
            android:background="@drawable/square"
            android:width="100dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
            android:text=" "
            android:textSize="70sp" />

    <Button android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:onClick="@string/makeMove"
            android:background="@drawable/square"
            android:width="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text=" "
            android:textSize="70sp"/>
</TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
    <Button android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:onClick="@string/makeMove"
            android:background="@drawable/square"
            android:width="100dp"

            android:layout_marginLeft="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text=" "
            android:textSize="70sp" />

    <Button android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:onClick="@string/makeMove"
            android:background="@drawable/square"
            android:width="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text=" "
            android:textSize="70sp" />

    <Button android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:onClick="@string/makeMove"
            android:background="@drawable/square"
            android:width="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text=" "
            android:textSize="70sp" />
</TableRow>
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
    <Button android:id="@+id/seven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:onClick="@string/makeMove"
            android:background="@drawable/square"
            android:width="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text=" "
            android:textSize="70sp" />

    <Button android:id="@+id/eight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:onClick="@string/makeMove"
            android:background="@drawable/square"
            android:width="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text=" "
            android:textSize="70sp" />

    <Button android:id="@+id/nine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:onClick="@string/makeMove"
            android:background="@drawable/square"
            android:width="100dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text=" "
            android:textSize="70sp" />
</TableRow>
    </TableLayout>

</RelativeLayout>
